--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,20 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 4px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 4px;
+    height: 10%;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #60a5fa;
+}
+
 body {
     font-family: "Hind Siliguri", sans-serif;
     font-weight: 400;
